# osgKaleido

./: .gitmodules  CMakeLists.txt  README.md
examples/osgkaleidosimple/: CMakeLists.txt  osgkaleidosimple.cpp
examples/osgkaleidosphere/: CMakeLists.txt  osgkaleidosphere.cpp
examples/osgkaleidosphere/data/: debug_texcoords_fs.glsl  debug_texcoords_vs.glsl  diffuse_sphere_fs.glsl  diffuse_sphere_gs.glsl  diffuse_sphere_tc.glsl  diffuse_sphere_te.glsl  diffuse_sphere_vs.glsl
examples/osgkaleidoviewer/: CMakeLists.txt  osgkaleidoviewer.cpp
examples/osgkaleidoviewer/data/: diffuse_billboard_instanced_vs.glsl  diffuse_directional1_fs.glsl  diffuse_directional1_vs.glsl  diffuse_directional2_fs.glsl  diffuse_directional2_vs.glsl
examples/osgkaleidoviewer/osg/: DrawCallbacks
examples/osgkaleidoviewer/osgGA/: LambdaEventHandler
include/osgKaleido/: Conversion  DynamicGeode  DynamicGeometry  Export  Polyhedron  PolyhedronGeode  PolyhedronGeometry  Util
src/: DynamicGeode.cpp  DynamicGeometry.cpp  Polyhedron.cpp  PolyhedronGeode.cpp  PolyhedronGeometry.cpp  Util.cpp
